--- a/EagleVM.Sandbox/CMakeLists.txt
+++ b/EagleVM.Sandbox/CMakeLists.txt
@@ -11,4 +11,5 @@ target_compile_features(EagleVMSandbox PRIVATE cxx_std_23)
 
 if(MSVC)
     target_compile_options(EagleVMSandbox PRIVATE /Od)
+    target_link_options(EagleVMSandbox PRIVATE "/MAP:${PROJECT_BINARY_DIR}/EVMS.map")
 endif()
