--- a/cmake.toml
+++ b/cmake.toml
@@ -20,5 +20,22 @@ compile-features = ["cxx_std_23"]
 link-libraries = ["Zydis", "bigint"]
 msvc.compile-options = ["/MP", "/permissive-", "/sdl", "/W3", "/Zc:inline", "/Zc:wchar_t"]
 
-# [target.EagleVMStub]
-# type = "executable"
+[target.EagleVMStub]
+type = "shared"
+include-directories = ["EagleVM.Stub/Headers"]
+sources = [
+    "EagleVM.Stub/**.cpp",
+    "EagleVM.Stub/**.hpp"
+]
+compile-features = ["cxx_std_23"]
+
+[target.EagleVMSandbox]
+type = "executable"
+sources = [
+    "EagleVM.Sandbox/**.cpp",
+    "EagleVM.Sandbox/**.hpp"
+]
+compile-features = ["cxx_std_23"]
+link-libraries = ["EagleVMStub"]
+
+# TODO: Tests
