fixed the debug info not showing on release for sandbox

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,6 +172,10 @@ target_link_libraries(EagleVMSandbox PRIVATE
 	EagleVMStub
 )
 
+target_link_options(EagleVMSandbox PRIVATE
+	"/DEBUG:FULL"
+)
+
 get_directory_property(CMKR_VS_STARTUP_PROJECT DIRECTORY ${PROJECT_SOURCE_DIR} DEFINITION VS_STARTUP_PROJECT)
 if(NOT CMKR_VS_STARTUP_PROJECT)
 	set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT EagleVMSandbox)
