--- a/deps/cmake.toml
+++ b/deps/cmake.toml
@@ -4,6 +4,8 @@ ZYDIS_BUILD_EXAMPLES = false
 
 [subdir.zydis]
 
+[subdir.nlohmann-json]
+
 [target.bigint]
 type = "interface"
 include-directories = ["bigint"]
