--- a/cmake.toml
+++ b/cmake.toml
@@ -46,5 +46,5 @@ sources = [
     "EagleVM.TestsGenerator/**.cpp",
     "EagleVM.TestsGenerator/**.hpp"
 ]
-link-libraries = ["nlohmann-json"]
 compile-features = ["cxx_std_23"]
+link-libraries = ["nlohmann_json", "Zydis"]
