--- a/cmake.toml
+++ b/cmake.toml
@@ -1,5 +1,6 @@
 [project]
 name = "EagleVM"
+languages = ["C", "CXX", "ASM_MASM"]
 
 [options]
 BUILD_TESTS = false
@@ -40,11 +41,12 @@ compile-features = ["cxx_std_23"]
 link-options = ["/DEBUG:FULL"]
 link-libraries = ["EagleVMStub"]
 
-[target.EagleVMTestsGenerator]
+[target.EagleVMTests]
 type = "executable"
 sources = [
-    "EagleVM.TestsGenerator/**.cpp",
-    "EagleVM.TestsGenerator/**.hpp"
+    "EagleVM.Tests/**.cpp",
+    "EagleVM.Tests/**.hpp",
+    "EagleVM.Tests/**.asm"
 ]
 compile-features = ["cxx_std_23"]
 link-libraries = ["nlohmann_json", "Zydis"]
