wip reworking virtualize as address for all handlers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,59 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/vm_inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_regs.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_virtualizer.cpp"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/disassembler.h"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/models/basic_block.h"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_end_reason.h"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_jump_location.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/math/mba_math.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/mba.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/mba_gen.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/variable/mba_const.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/variable/mba_exp.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/variable/mba_var.h"
+	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/variable/mba_xy.h"
+	"EagleVM.Core/headers/eaglevm-core/pe/models/code_view_pdb.h"
+	"EagleVM.Core/headers/eaglevm-core/pe/packer/pe_packer.h"
+	"EagleVM.Core/headers/eaglevm-core/pe/pe_generator.h"
+	"EagleVM.Core/headers/eaglevm-core/pe/pe_parser.h"
+	"EagleVM.Core/headers/eaglevm-core/util/random.h"
+	"EagleVM.Core/headers/eaglevm-core/util/section/code_label.h"
+	"EagleVM.Core/headers/eaglevm-core/util/section/function_container.h"
+	"EagleVM.Core/headers/eaglevm-core/util/section/section_manager.h"
+	"EagleVM.Core/headers/eaglevm-core/util/util.h"
+	"EagleVM.Core/headers/eaglevm-core/util/zydis_defs.h"
+	"EagleVM.Core/headers/eaglevm-core/util/zydis_helper.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/handler/base_handler_entry.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/handler/inst_handler_entry.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/handler/vm_handler_entry.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/add.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/dec.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/div.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/imul.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/inc.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/lea.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/mov.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/movsx.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/mul.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/pop.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/push.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/ia32_handlers/sub.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/include_ia32.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/include_vm.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/models/handler_info.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_enter.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_exit.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_load.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_pop_rflags.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_push_rflags.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_store.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_trash_rflags.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_defs.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_op_action.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_inst.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_inst_handlers.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_inst_regs.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_virtualizer.h"
 	cmake.toml
 )
 
@@ -161,6 +214,7 @@ endif()
 set(EagleVMStub_SOURCES
 	"EagleVM.Stub/EagleVMStub.cpp"
 	"EagleVM.Stub/dllmain.cpp"
+	"EagleVM.Stub/Headers/EagleVMStub/EagleVMStub.h"
 	cmake.toml
 )
 
