wip implementing il

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,8 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/handlers/vm_handlers/vm_rflags_load.cpp"
 	"EagleVM.Core/source/virtual_machine/handlers/vm_handlers/vm_rflags_save.cpp"
 	"EagleVM.Core/source/virtual_machine/handlers/vm_handlers/vm_store.cpp"
+	"EagleVM.Core/source/virtual_machine/il/commands/vm_exit.cpp"
+	"EagleVM.Core/source/virtual_machine/il/il_bb.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_regs.cpp"
@@ -165,13 +167,20 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_rflags_load.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_rflags_save.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/handlers/vm_handlers/vm_store.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/base_command.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/vm_enter.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/vm_exit.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/vm_handler_call.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/vm_param.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/il_bb.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/models/command.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/models/command_type.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_defs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_op_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_inst.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_inst_handlers.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_inst_regs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/vm_virtualizer.h"
-	"EagleVM.Core/source/virtual_machine/il/models/command.h"
 	cmake.toml
 )
 
