added handler entries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,16 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/il/il_bb.cpp"
 	"EagleVM.Core/source/virtual_machine/il/il_translator.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/base_x86_lifter.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/add.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/cmp.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/dec.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/imul.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/inc.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/lea.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/movsx.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/pop.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/push.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handlers/sub.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_regs.cpp"
@@ -185,13 +195,24 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/models/cmd_modifier.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/models/cmd_stack.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/commands/models/cmd_type.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/handlers/base_handler_gen.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/il_bb.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/il_bb_x86.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/il_translator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/models/il_reg.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/models/il_size.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/base_handler_gen.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/base_x86_lifter.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/add.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/cmp.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/dec.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/imul.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/inc.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/lea.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/mov.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/movsx.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/pop.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/push.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/sub.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/models/handler_info.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/models/handler_vm_id.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_defs.h"
