--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,9 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/il/commands/cmd_exit.cpp"
 	"EagleVM.Core/source/virtual_machine/il/commands/models/cmd_type.cpp"
 	"EagleVM.Core/source/virtual_machine/il/il_translator.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/base_handler_gen.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/base_x86_lifter.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/handle_data.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/handlers/add.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/handlers/cmp.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/handlers/dec.cpp"
@@ -127,6 +129,16 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/il/x86/handlers/pop.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/handlers/push.cpp"
 	"EagleVM.Core/source/virtual_machine/il/x86/handlers/sub.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/add.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/cmp.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/dec.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/imul.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/inc.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/lea.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/movsx.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/pop.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/push.cpp"
+	"EagleVM.Core/source/virtual_machine/il/x86/lifters/sub.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/vm_inst_regs.cpp"
@@ -215,6 +227,17 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/pop.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/push.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/handlers/sub.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/add.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/cmp.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/dec.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/imul.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/inc.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/lea.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/mov.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/movsx.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/pop.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/push.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/lifters/sub.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/models/handler_info.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/il/x86/models/handler_vm_id.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_defs.h"
