reworked handler call command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,9 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_branch.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_load.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_store.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_handler_call.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_mem_read.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_mem_write.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_sx.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/models/cmd_type.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/ir_translator.cpp"
@@ -158,7 +161,9 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x86_dynamic.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x86_exec.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/include.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_handler_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_modifier.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_operand_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_stack.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_type.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/ir_translator.h"
@@ -179,16 +184,17 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/pop.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/push.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/sub.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_info.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_op.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_vm_id.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/lift_action.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/operand_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/base_machine.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_handlers.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_regs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/machine.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_defs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_op_action.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_operand_sig.h"
 	cmake.toml
 )
 
