--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_handlers.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_regs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/settings.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_defs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_op_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_operand_sig.h"
