work on some handlers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/pop.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/push.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/sub.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/x86/util.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/base_machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/inst_regs.cpp"
@@ -171,6 +172,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/ir_translator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_discrete_reg.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_size.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_store.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/base_handler_gen.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/base_x86_translator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handler_data.h"
@@ -190,6 +192,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_op.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/lift_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/op_signature.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/util.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/base_machine.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_handlers.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_regs.h"
