work in progress eagle vm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,9 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/sub.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/util.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/base_machine.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/eagle/inst_handlers.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/eagle/inst_regs.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/eagle/machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/inst_regs.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/machine.cpp"
@@ -194,6 +197,10 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/op_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/util.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/base_machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/inst_handlers.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/inst_regs.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/settings.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_handlers.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_regs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/machine.h"
