wip register context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/inst_handlers.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/inst_regs.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/pidgeon/machine.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/transaction_handler.cpp"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_defs.h"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_enum.h"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_helper.h"
@@ -205,6 +206,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_regs.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/machine.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/settings.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/transaction_handler.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/util.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_op_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_operand_sig.h"
