--- a/deps/cmake.toml
+++ b/deps/cmake.toml
@@ -6,6 +6,8 @@ ZYDIS_BUILD_EXAMPLES = false
 
 [subdir.nlohmann-json]
 
+[subdir.spdlog]
+
 [target.bigint]
 type = "interface"
 include-directories = ["bigint"]
